--- a/css/master.css
+++ b/css/master.css
@@ -351,7 +351,7 @@ input::-webkit-inner-spin-button {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("../img/epa_background.jpg") center center no-repeat;
+  background: url("../img/girls.jpg") center center no-repeat;
   -webkit-filter: contrast(140%);
   -webkit-background-size: cover;
   -moz-background-size: cover;
