--- a/index.jade
+++ b/index.jade
@@ -76,11 +76,11 @@ html
                     .typ-larger
                         p Ever wanted to build a website or an app?
                         p #{title} will help you learn how to create real products in one action-packed & incredibly fun #{hours_long} hour event.
-                    //p: a.button.large.js-register Register Now >
+                    p: a.button.large.js-register Register Now >
                     p
                         a.action_link(href=sponsor_doc) Want to sponsor? >
                         //a.action_link(href="/mentors.html") Want to mentor? > 
-                    p: a.action_link(href="http://eepurl.com/JhjCv") Get notified when registration opens >
+                    //p: a.action_link(href="http://eepurl.com/JhjCv") Get notified when registration opens >
             .row
                 nav.box.span-7.align-top.mobile-full
                     a(href="#about") About
