--- a/index.jade
+++ b/index.jade
@@ -79,7 +79,7 @@ html
                     p: a.button.large.js-register Register Now >
                     p
                         a.action_link(href=sponsor_doc) Want to sponsor? >
-                        //a.action_link(href="/mentors.html") Want to mentor? > 
+                        a.action_link(href="/mentors.html") Want to mentor? > 
                     //p: a.action_link(href="http://eepurl.com/JhjCv") Get notified when registration opens >
             .row
                 nav.box.span-7.align-top.mobile-full
