move dependencies to static.gopilot.org

--- a/mentors.jade
+++ b/mentors.jade
@@ -4,8 +4,8 @@ html
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		title Register to mentor at #{title}
-		link(rel='stylesheet', href='font/icon-7/css/icons.css')
-		link(rel='stylesheet', href='css/complete.css')
+		link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
+		link(rel='stylesheet', href='https://static.gopilot.org/complete.css')
 	body
 		.error-container
 			.centered
@@ -78,7 +78,5 @@ html
 					textarea(placeholder="(optional)").js-other
 				a.button.large.blue.js-submit Complete Registration
 
-		script(type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js")
-		script(type="text/javascript" src="/scripts/jquery.typewatch.js")
-		script(type="text/javascript" src="/scripts/mentors.js" async)
+		script(type="text/javascript" src="https://static.gopilot.org/mentors.js" async)
 		<script>var PILOT_EVENT_ID = "#{event_id}";</script>
