--- a/complete.jade
+++ b/complete.jade
@@ -4,8 +4,8 @@ html
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		title Complete your #{title} registration
-		link(rel='stylesheet', href='font/icon-7/css/icons.css')
-		link(rel='stylesheet', href='css/complete.css')
+		link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
+		link(rel='stylesheet', href='https://static.gopilot.org/complete.css')
 	body
 		.error-container(style="")
 			.centered
@@ -95,7 +95,5 @@ html
 					a.button.large.blue.js-submit Complete Registration
 				.error-messages
 
-		script(type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js")
-		script(type="text/javascript" src="/scripts/jquery.typewatch.js")
-		script(type="text/javascript" src="/scripts/complete.js" async)
+		script(type="text/javascript" src="https://static.gopilot.org/complete.js" async)
 		<script>var PILOT_EVENT_ID = "#{event_id}";</script>
