--- a/confirmation.jade
+++ b/confirmation.jade
@@ -9,8 +9,8 @@ html(style="width: 100%; height: 100%;")
 
         title="Registration Complete!"
 
-        link(rel='stylesheet', href='/lib/font-awesome/css/font-awesome.css')
-        link(rel='stylesheet', href='/css/confirmation.css')
+        link(rel='stylesheet', href='https://static.gopilot.org/lib/font-awesome/css/font-awesome.css')
+        link(rel='stylesheet', href='https://static.gopilot.org/confirmation.css')
         script.
             var fb_param = {};
             fb_param.pixel_id = '6012903874317';
