--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,8 @@ html
         title=title
         meta(name='description', content=title+' is a #{hours_long} hour event where you can learn to build apps, websites, and more!')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        link(rel='stylesheet', href='font/icon-7/css/icons.css')
-        link(rel='stylesheet', href='css/master.css')
+        link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
+        link(rel='stylesheet', href='https://static.gopilot.org/master.css')
         
     body
         #registerModal.modal
@@ -179,9 +179,5 @@ html
                     p We'd love to help answer it for you! Send us an email at <a href="mailto:fly@gopilot.org">fly@gopilot.org</a> with your question, and we'll get back to you within 24 hours.
         
         <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', '#{analytics}', 'gopilot.org');ga('send', 'pageview');</script>
-        script(type="text/javascript" src="https://js.stripe.com/v2/")
-        script(type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js")
-        script(type="text/javascript" src="/scripts/jquery.typewatch.js")
-        script(type="text/javascript" src="/scripts/jquery.payment.js")
-        script(type="text/javascript" src="/scripts/main.js" async)
+        script(type="text/javascript" src="https://static.gopilot.org/event.js" async)
         <script>var PILOT_EVENT_ID = "#{event_id}";var PILOT_EVENT_PRICE=#{price};</script>
