--- a/index.jade
+++ b/index.jade
@@ -8,7 +8,7 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
         link(rel='stylesheet', href='https://static.gopilot.org/master.css')
-        
+        link(rel='stylesheet', href='/font/fonts.css')
     body
         #registerModal.modal
             .modal-content.box.slate.step-1
