--- a/mentors.jade
+++ b/mentors.jade
@@ -6,6 +6,7 @@ html
 		title Register to mentor at #{title}
 		link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
 		link(rel='stylesheet', href='https://static.gopilot.org/complete.css')
+		link(rel='stylesheet', href='/font/fonts.css')
 	body
 		.error-container
 			.centered
