--- a/complete.jade
+++ b/complete.jade
@@ -6,6 +6,7 @@ html
 		title Complete your #{title} registration
 		link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
 		link(rel='stylesheet', href='https://static.gopilot.org/complete.css')
+		link(rel='stylesheet', href='/font/fonts.css')
 	body
 		.error-container(style="")
 			.centered
