--- a/confirmation.jade
+++ b/confirmation.jade
@@ -11,6 +11,7 @@ html(style="width: 100%; height: 100%;")
 
         link(rel='stylesheet', href='https://static.gopilot.org/lib/font-awesome/css/font-awesome.css')
         link(rel='stylesheet', href='https://static.gopilot.org/confirmation.css')
+        link(rel='stylesheet', href='/font/fonts.css')
         script.
             var fb_param = {};
             fb_param.pixel_id = '6012903874317';
