--- a/confirmation.jade
+++ b/confirmation.jade
@@ -9,7 +9,7 @@ html(style="width: 100%; height: 100%;")
 
         title="Registration Complete!"
 
-        link(rel='stylesheet', href='https://static.gopilot.org/lib/font-awesome/css/font-awesome.css')
+        link(rel='stylesheet', href='/font/font-awesome/css/font-awesome.css')
         link(rel='stylesheet', href='https://static.gopilot.org/confirmation.css')
         link(rel='stylesheet', href='/font/fonts.css')
         script.
