--- a/index.jade
+++ b/index.jade
@@ -6,7 +6,7 @@ html
         title=title
         meta(name='description', content=title+' is a #{hours_long} hour event where you can learn to build apps, websites, and more!')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-        link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
+        link(rel='stylesheet', href='/font/icon-7/css/icons.css')
         link(rel='stylesheet', href='https://static.gopilot.org/master.css')
         link(rel='stylesheet', href='/font/fonts.css')
     body
