--- a/mentors.jade
+++ b/mentors.jade
@@ -4,7 +4,7 @@ html
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		title Register to mentor at #{title}
-		link(rel='stylesheet', href='https://static.gopilot.org/font/icon-7/css/icons.css')
+		link(rel='stylesheet', href='/font/icon-7/css/icons.css')
 		link(rel='stylesheet', href='https://static.gopilot.org/complete.css')
 		link(rel='stylesheet', href='/font/fonts.css')
 	body
